--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "stardew-valley-fortune-bot",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=8.9.1",
+    "npm": ">=5.5.1"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node bot.js"
   },
   "repository": {
